--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "promise-polyfill": "^6.1.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
